# Chess-AI

./: CMakeLists.txt  README.md  TEST  board.cpp  board.h  chess_controller.cpp  chess_controller.h  chess_model.cpp  chess_model.h  computer_player.cpp  computer_player.h  exceptions.h  human_player.cpp  human_player.h  main.cpp  piece.cpp  piece.h  player.cpp  player.h  terminal.cpp  terminal.h  view.cpp  view.h
